# abridged-certs-rs

./: .gitignore  Cargo.toml  README.md  build.rs
data/: data.json  tranco-top-10k-sites.csv
data/certificate_messages/: adobe.com  amazon-adsystem.com  app-measurement.com  apple.com  azure.com  bing.com  bit.ly  blogspot.com  cloudflare-dns.com  cloudflare.com  cloudflare.net  digicert.com  doubleclick.net  europa.eu  fbcdn.net  gandi.net  github.com  goo.gl  googleapis.com  googledomains.com  googlesyndication.com  googleusercontent.com  googlevideo.com  gstatic.com  icloud.com  instagram.com  intuit.com  live.com  microsoft.com  mozilla.org  msn.com  netflix.com  office.com  office365.com  opera.com  pinterest.com  reddit.com  roblox.com  sharepoint.com  shipt.com  (+18 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_cert.rs  pass1pass2.rs  pass2_decomp.rs
src/: lib.rs  tls.rs
src/pass1/: builtins.rs  mod.rs
src/pass2/: builtins.rs  mod.rs
supply-chain/: config.toml
tools/: build_pass1_md.py  build_pass1_rust.py  fetch_cert_messages.py  fetch_certs.py  tstclnt_patch.diff
