[package]
name = "abridged-certs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake = "2.0.2"
bytes = "1.5.0"
datatest = "0.8.0"
phf = "0.11.2"
simple-error = "0.3.0"

[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
phf_codegen = "0.11.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4.3"
bytes = "1.5.0"
blake = "2.0.2"
