[package]
name = "abridged-certs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
nightly-features = ["dep:datatest"]

[dependencies]
blake = "2.0.2"
bytes = "1.5.0"
phf = "0.11.2"
simple-error = "0.3.0"
datatest = { version = "0.8.0", optional = true }
brotli = "7.0.0"
clap = { version = "4.5.19", features = ["derive"] }
base64 = "0.22.1"

[dev-dependencies]
hex = "0.4.3"


[build-dependencies]
phf_codegen = "0.11.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4.3"
bytes = "1.5.0"
blake = "2.0.2"
