[package]
name = "abridged-certs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1.5.0"

[dependencies.abridged-certs]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_cert"
path = "fuzz_targets/parse_cert.rs"
test = false
doc = false
